Fix for map panning on mobile

--- a/app/style.scss
+++ b/app/style.scss
@@ -284,6 +284,16 @@ footer {
             filter: saturate(10) hue-rotate(-30deg);
             mix-blend-mode: plus-lighter;
         }
+
+        &::after{
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            z-index: 999;
+        }
     }
 }
  
